force-app/main/default/objects/FieloEE__Transaction__c/FieloEE__Transaction__c.object-meta.xml
<CustomObject>
    <description>Actions that generate points performed by members.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>