force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloCH__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Challenge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenge</label>
    <referenceTo>FieloCH__Challenge__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>