force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Adjust__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Adjust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Read only field.</inlineHelpText>
    <label>Adjust Transaction</label>
    <referenceTo>FieloEE__Transaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>