force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Approved__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates whether the transaction was or not approved (read only field).</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>