force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__ApprovedReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ApprovedReadOnly__c</fullName>
    <formula>IF(  FieloEE__Approved__c , $Label.fieloee__approved , $Label.fieloee__notapproved )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved (Read Only)</label>
    <type>Text</type>
</CustomField>