force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AttachmentId__c</fullName>
    <label>Attachment Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>