force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Branch__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch where transaction was done</description>
    <inlineHelpText>Look up the branch where the transaction took place.</inlineHelpText>
    <label>Branch</label>
    <referenceTo>FieloEE__Branch__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>