force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Code__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Code__c</fullName>
    <label>Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>