force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__CodeItem__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CodeItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Item</label>
    <referenceTo>FieloEE__Code__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>