force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Cost__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Cost__c</fullName>
    <description>Cost related to each point.</description>
    <formula>IF(ISNULL(FieloEE__PointCost__c), FieloEE__Points__c * FieloEE__Member__r.FieloEE__Program__r.FieloEE__PointCost__c, FieloEE__Points__c * FieloEE__PointCost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>