force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Date__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <description>Date and time of this transaction.</description>
    <inlineHelpText>Enter date and time of this transaction.</inlineHelpText>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>