force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__DateReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__DateReadOnly__c</fullName>
    <formula>FieloEE__Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date &amp; Time (Read Only)</label>
    <type>DateTime</type>
</CustomField>