force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__IdentificationType__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__IdentificationType__c</fullName>
    <description>Identification of the member entered in the transaction.</description>
    <label>Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>