force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Location__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Location__c</fullName>
    <label>Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>