force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The member who peformed the transaction.</description>
    <inlineHelpText>Enter the member who performed this transaction.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>