force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__MemberCode__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberCode__c</fullName>
    <description>ID of the member that made the transaction.</description>
    <label>Identification Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>