force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__MemberReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberReadOnly__c</fullName>
    <formula>HYPERLINK(&#39;/&#39; + FieloEE__Member__c ,  FieloEE__Member__r.FieloEE__Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member (Read Only)</label>
    <type>Text</type>
</CustomField>