force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Offline__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Offline__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box for the transaction to be processed offline.</inlineHelpText>
    <label>Offline</label>
    <type>Checkbox</type>
</CustomField>