force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__PointCost__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__PointCost__c</fullName>
    <description>The value of a point in real life currency.</description>
    <inlineHelpText>Enter actual cost, in the  currency of your choice, of a point in your program.</inlineHelpText>
    <label>Point Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>