force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Points__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Points__c</fullName>
    <description>The number of points produced by the transaction.</description>
    <inlineHelpText>Enter the number of points produced by this transaction.</inlineHelpText>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>