force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__PointsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__PointsReadOnly__c</fullName>
    <formula>FieloEE__Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points (Read Only)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>