force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Processed__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It indicates whether the transaction was or not processed (read only field).</description>
    <inlineHelpText>Read only field.</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>