force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__ProcessedStatusReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ProcessedStatusReadOnly__c</fullName>
    <formula>IF(  FieloEE__Processed__c ,  $Label.fieloee__processed ,  $Label.fieloee__notprocessed )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processed Status (Read Only)</label>
    <type>Text</type>
</CustomField>