force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Referral__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>On case of a referral transaction, here is the link to the referred.</description>
    <label>Referral</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipLabel>Transactions (Referral)</relationshipLabel>
    <relationshipName>TransactionsFromReferrals</relationshipName>
    <type>Lookup</type>
</CustomField>