force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Revenue__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Revenue__c</fullName>
    <description>Value earned in the transaction: It is equivalent to Value - Cost, and it has to be positive.</description>
    <formula>FieloEE__Value__c - FieloEE__Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>