force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Reverted__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Reverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverted</label>
    <type>Checkbox</type>
</CustomField>