force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Reward__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reward</label>
    <referenceTo>FieloEE__Reward__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>