force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__SkipEngine__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__SkipEngine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Engine</label>
    <type>Checkbox</type>
</CustomField>