force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Unapproved Transaction</fullName>
            </value>
            <value>
                <fullName>Error in the Approval Process</fullName>
            </value>
            <value>
                <fullName>Transaction without Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>