force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__StatusReadOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__StatusReadOnly__c</fullName>
    <formula>TEXT(FieloEE__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status (Read Only)</label>
    <type>Text</type>
</CustomField>