force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__TransactionId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TransactionId__c</fullName>
    <description>A code you can assign to this transaction in order to identify it later.</description>
    <inlineHelpText>Enter an unique code in order to identify this transaction (optional).</inlineHelpText>
    <label>Transaction Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>