force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Type__c</fullName>
    <description>The type of the transaction.</description>
    <inlineHelpText>Pick the type of transaction.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adjust</fullName>
            </value>
            <value>
                <fullName>Code Insert</fullName>
            </value>
            <value>
                <fullName>Expiration</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
                <default>true</default>
                <label>Purchase</label>
            </value>
            <value>
                <fullName>Referral - Step 1</fullName>
            </value>
            <value>
                <fullName>Referral - Step 2</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>