force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloEE__Value__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The value of the purchase originating this transaction.</description>
    <inlineHelpText>Enter the purchase value.</inlineHelpText>
    <label>Purchase Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>