force-app/main/default/objects/FieloEE__Transaction__c/fields/FieloSVY__SurveyResponse__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__SurveyResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Response</label>
    <referenceTo>FieloSVY__SurveyResponse__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>