force-app/main/default/objects/FieloEE__Transaction__c/validationRules/FieloEE__Validate_Member.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Validate_Member</fullName>
    <active>true</active>
    <errorConditionFormula>(FieloEE__Member__c == null)  &amp;&amp; ( FieloEE__MemberCode__c == null || ISPICKVAL(FieloEE__IdentificationType__c,&#39;&#39;) )</errorConditionFormula>
    <errorMessage>You must complete the Member Code and Identification Type, or the Member Field.</errorMessage>
</ValidationRule>