force-app/main/default/objects/FieloEE__Transaction__c/validationRules/FieloEE__ValidateTransactionType.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__ValidateTransactionType</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__Value__c != 0 &amp;&amp; ( ISPICKVAL(FieloEE__Type__c, &#39;Code Insert&#39; ) || ISPICKVAL(FieloEE__Type__c, &#39;Referral - Step 1&#39; ) || ISPICKVAL(FieloEE__Type__c, &#39;Referral - Step 2&#39; ) || ISPICKVAL(FieloEE__Type__c, &#39;Registration&#39; ) )</errorConditionFormula>
    <errorMessage>You must enter "Purchase value = 0" for transactions of types: Registration, Code insert, Referral - Simple signup, and Referral - Complete signup.</errorMessage>
</ValidationRule>