force-app/main/default/objects/FieloEE__Transaction__c/validationRules/FieloEE__ValidateTransactionValue.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__ValidateTransactionValue</fullName>
    <active>false</active>
    <errorConditionFormula>FieloEE__Value__c = 0 &amp;&amp; ISPICKVAL(FieloEE__Type__c, &#39;Purchase&#39; )</errorConditionFormula>
    <errorDisplayField>FieloEE__Value__c</errorDisplayField>
    <errorMessage>Value cannot be 0</errorMessage>
</ValidationRule>