force-app/main/default/objects/FieloEE__Transaction__c/listViews/FieloEE__All_Transactions.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Transactions</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Type__c</columns>
    <columns>FieloEE__Value__c</columns>
    <columns>FieloEE__MemberReadOnly__c</columns>
    <columns>FieloEE__DateReadOnly__c</columns>
    <columns>FieloEE__ApprovedReadOnly__c</columns>
    <columns>FieloEE__ProcessedStatusReadOnly__c</columns>
    <columns>FieloEE__StatusReadOnly__c</columns>
    <columns>FieloEE__PointsReadOnly__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Transactions</label>
    <language>en_US</language>
</ListView>