force-app/main/default/objects/FieloEE__Transaction__c/listViews/FieloEE__ByTypeCodeInsert.listView-meta.xml
<ListView>
    <fullName>FieloEE__ByTypeCodeInsert</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Processed__c</columns>
    <columns>FieloEE__Member__c</columns>
    <columns>FieloEE__IdentificationType__c</columns>
    <columns>FieloEE__MemberCode__c</columns>
    <columns>FieloEE__Value__c</columns>
    <columns>FieloEE__Points__c</columns>
    <columns>FieloEE__Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieloEE__Type__c</field>
        <operation>equals</operation>
        <value>Code Insert</value>
    </filters>
    <label>By Type Code Insert</label>
    <language>en_US</language>
</ListView>