force-app/main/default/objects/FieloEE__Transaction__c/listViews/FieloEE__ByTypeReferralSimpleSignup.listView-meta.xml
<ListView>
    <fullName>FieloEE__ByTypeReferralSimpleSignup</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Processed__c</columns>
    <columns>FieloEE__Member__c</columns>
    <columns>FieloEE__IdentificationType__c</columns>
    <columns>FieloEE__MemberCode__c</columns>
    <columns>FieloEE__Value__c</columns>
    <columns>FieloEE__Points__c</columns>
    <columns>FieloEE__Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieloEE__Type__c</field>
        <operation>equals</operation>
        <value>Referral - Step 1</value>
    </filters>
    <label>By Type Referral - Simple Signup</label>
    <language>en_US</language>
</ListView>