force-app/main/default/objects/FieloEE__Transaction__c/listViews/FieloEE__ThisWeek.listView-meta.xml
<ListView>
    <fullName>FieloEE__ThisWeek</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Processed__c</columns>
    <columns>FieloEE__Member__c</columns>
    <columns>FieloEE__IdentificationType__c</columns>
    <columns>FieloEE__MemberCode__c</columns>
    <columns>FieloEE__Value__c</columns>
    <columns>FieloEE__Points__c</columns>
    <columns>FieloEE__Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
    <language>en_US</language>
</ListView>